Add options page
* Allow setting log level
* Allow only checking domain visible in URL
* Allow blacklisting/ignoring of domains

--- a/popup.html
+++ b/popup.html
@@ -23,6 +23,7 @@
 		</p>
 		
 		<p><a href="storage.html" target="_blank">Show Storage</a></p>
+		<script src="common.js"></script>
 		<script src="popup.js"></script>
 	</body>
 </html>
