--- a/options.html
+++ b/options.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Certificate Checker Options</title>
-		<link rel="icon" href="icons/cc_128.png" />
+		<title>Certificate Watch Options</title>
+		<link rel="icon" href="icons/cw_128.png" />
 		<style>
 			
 		</style>
