--- a/storage.html
+++ b/storage.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Certificate Checker Storage</title>
-		<link rel="icon" href="icons/cc_128.png" />
+		<title>Certificate Watch Storage</title>
+		<link rel="icon" href="icons/cw_128.png" />
 		<style>
 			table {
 				border-collapse: collapse;
