--- a/storage.html
+++ b/storage.html
@@ -5,8 +5,17 @@
 		<title>Certificate Watch Storage</title>
 		<link rel="icon" href="icons/cw_128.png" />
 		<style>
+			#logo {
+				float: left;
+				padding-bottom: 10px;
+			}
+			#numDomains {
+				font-weight: bold;
+			}
 			table {
 				border-collapse: collapse;
+				clear: both;
+				width: 100%;
 			}
 			table, th, td {
 				border: 1px solid black;
@@ -14,12 +23,26 @@
 			th, td {
 				padding: 5px;
 			}
+			.noBold {
+				font-weight: normal;
+			}
 		</style>
 	</head>
 	<body>
+		<img id="logo" src="icons/cw_128.png" alt="" width="128" height="128" />
+		<h1>Certificate Watch Storage</h1>
+		<span id="numDomains">0</span> domains stored.
+		<br />
+		<br />
+		<input id="removeAll" type="button" value="Remove All" />
+		
 		<table border="1" id="storageTable">
 			<tr class="header">
-				<th rowspan="2">Domain</th>
+				<th rowspan="2">
+					Domain
+					<br />
+					<span class="noBold">Filter:</span> <input id="domainFilter" type="text" />
+				</th>
 				<th colspan="4">Certificate</th>
 				<th rowspan="2">Remove</th>
 			</tr>
