Dynamically update popup content when its open

--- a/popup.html
+++ b/popup.html
@@ -25,17 +25,17 @@
 		<p>
 			<img src="icons/cw_16_changed.png" alt="" width="16" height="16" />
 			<b><span id="numChanged">0</span></b> changed certificates
-			<ul hidden id="changedList"></ul>
+			<ul id="changedList"></ul>
 		</p>
 		<p>
 			<img src="icons/cw_16_tofu.png" alt="" width="16" height="16" />
 			<b><span id="numTofu">0</span></b> new certificates
-			<ul hidden id="tofuList"></ul>
+			<ul id="tofuList"></ul>
 		</p>
 		<p>
 			<img src="icons/cw_16_stored.png" alt="" width="16" height="16" />
 			<b><span id="numStored">0</span></b> stored certificates
-			<ul hidden id="storedList"></ul>
+			<ul id="storedList"></ul>
 		</p>
 		
 		<p><a href="storage.html" target="_blank">Show Storage</a></p>
