Set uninitialized counts to ? instead of 0

--- a/popup.html
+++ b/popup.html
@@ -24,17 +24,17 @@
 		</div>
 		<p>
 			<img src="icons/cw_16_changed.png" alt="" width="16" height="16" />
-			<b><span id="numChanged">0</span></b> changed certificates
+			<b><span id="numChanged">?</span></b> changed certificates
 			<ul id="changedList"></ul>
 		</p>
 		<p>
 			<img src="icons/cw_16_tofu.png" alt="" width="16" height="16" />
-			<b><span id="numTofu">0</span></b> new certificates
+			<b><span id="numTofu">?</span></b> new certificates
 			<ul id="tofuList"></ul>
 		</p>
 		<p>
 			<img src="icons/cw_16_stored.png" alt="" width="16" height="16" />
-			<b><span id="numStored">0</span></b> stored certificates
+			<b><span id="numStored">?</span></b> stored certificates
 			<ul id="storedList"></ul>
 		</p>
 		
