--- a/storage.html
+++ b/storage.html
@@ -31,7 +31,7 @@
 	<body>
 		<img id="logo" src="icons/cw_128.png" alt="" width="128" height="128" />
 		<h1>Certificate Watch Storage</h1>
-		<span id="numDomains">0</span> domains stored.
+		<span id="numDomains">?</span> domains stored.
 		<br />
 		<br />
 		<input id="removeAll" type="button" value="Remove All" />
