Add link to settings page in popup

--- a/popup.html
+++ b/popup.html
@@ -38,7 +38,11 @@
 			<ul id="storedList"></ul>
 		</p>
 		
-		<p><a href="storage.html" target="_blank">Show Storage</a></p>
+		<p>
+			<a id="settingsLink" href="options.html">Settings</a>
+			|
+			<a href="storage.html" target="_blank">Show Storage</a>
+		</p>
 		<script src="common.js"></script>
 		<script src="popup.js"></script>
 	</body>
