Hide scrollbar in options page
Somehow, about:addons adds a scrollbar even though
the content perfectly fits the container. This works
arround this visuall annoyance.

--- a/options.html
+++ b/options.html
@@ -5,6 +5,9 @@
 		<title>Certificate Watch Options</title>
 		<link rel="icon" href="icons/cw_128.png" />
 		<style>
+			body {
+				overflow: hidden;
+			}
 			#ignoredDomains {
 				min-width: 100%;
 				max-width: 100%;
