Add estimated storage size to storage page

--- a/storage.html
+++ b/storage.html
@@ -32,6 +32,7 @@
 		<img id="logo" src="icons/cw_128.png" alt="" width="128" height="128" />
 		<h1>Certificate Watch Storage</h1>
 		<span id="numDomains">?</span> domains stored.
+		Estimated storage size is between <span id="sizeLower">?</span> and <span id="sizeUpper">?</span>.
 		<br />
 		<br />
 		<input id="removeAll" type="button" value="Remove All" />
