Add option in the pop-up to (temporarily) disable the cert checking
This clears all tab states and shows a disabled icon (closed eye)

--- a/popup.html
+++ b/popup.html
@@ -39,9 +39,11 @@
 		</p>
 		
 		<p>
-			<a id="settingsLink" href="options.html">Settings</a>
+			<a id="state" href="#"></a>
 			|
-			<a href="storage.html" target="_blank">Show Storage</a>
+			<a id="settingsLink" title="Show settings page" href="#">Settings</a>
+			|
+			<a title="Show storage page" href="storage.html" target="_blank">Show Storage</a>
 		</p>
 		<script src="common.js"></script>
 		<script src="popup.js"></script>
