--- a/cw_popup.html
+++ b/cw_popup.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- The browser action popup page. -->
 <html>
 	<head>
 		<meta charset="utf-8" />
@@ -43,9 +44,9 @@
 			|
 			<a id="settingsLink" href="#" data-i18n="popupSettings;title=popupSettingsTooltip"></a>
 			|
-			<a href="storage.html" target="_blank" data-i18n="popupStorage;title=popupStorageTooltip" ></a>
+			<a href="cw_storage.html" target="_blank" data-i18n="popupStorage;title=popupStorageTooltip" ></a>
 		</p>
-		<script src="common.js"></script>
-		<script src="popup.js"></script>
+		<script src="cw_common.js"></script>
+		<script src="cw_popup.js"></script>
 	</body>
 </html>
