--- a/cw_storage.html
+++ b/cw_storage.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- The storage display page. -->
 <html>
 	<head>
 		<meta charset="utf-8" />
@@ -59,7 +60,7 @@
 				-->
 			</tr>
 		</table>
-		<script src="common.js"></script>
-		<script src="storage.js"></script>
+		<script src="cw_common.js"></script>
+		<script src="cw_storage.js"></script>
 	</body>
 </html>
