Make "tabs" an optional dependency
When it is first selected in preferences, the user is requested
to grant that permission.
Also describe permissions in README

--- a/cw_settings.html
+++ b/cw_settings.html
@@ -45,6 +45,10 @@
 					<textarea id="ignoredDomains" rows="15"></textarea>
 				</div>
 			</p>
+			<p>
+				<input type="button" id="save" disabled data-i18n="value=settingsSave" />
+				<input type="button" id="reset" disabled data-i18n="value=settingsReset" />
+			</p>
 		</form>
 
 		<script src="cw_common.js"></script>
