--- a/cw_settings.html
+++ b/cw_settings.html
@@ -68,7 +68,7 @@
 			</tr>
 		</table>
 		<div class="sizeLimit">
-			<textarea id="ignoredDomains" rows="15"></textarea>
+			<textarea id="ignoredDomains" rows="15" data-i18n="placeholder=settingsIgnoredDomainsTooltip;title=settingsIgnoredDomainsTooltip"></textarea>
 		</div>
 
 		<input type="button" id="save" disabled data-i18n="value=settingsSave" />
