--- a/cw_settings.html
+++ b/cw_settings.html
@@ -10,17 +10,14 @@
 			body {
 				overflow: hidden;
 			}
-			#logo {
-				position: absolute;
-				top: 0px;
-				right: 0px;
-			}
 			#ignoredDomains {
 				box-sizing: border-box;
 				min-width: 100%;
 				max-width: 100%;
+				resize: vertical;
 			}
-			.sizeLimit {
+			table {
+				width: 100%;
 				max-width: 40em;
 			}
 			select {
@@ -28,15 +25,17 @@
 			}
 			.key {
 				text-align: right;
+				vertical-align: top;
+				padding-top: 0.9em;
+			}
+			.save {
+				text-align: center;
 			}
 		</style>
 	</head>
 	<body>
-		<img id="logo" src="icons/cw_128.png" alt="" width="128" height="128" />
-		<h1 data-i18n="settingsTitle"></h1>
-
 		<table>
-			<tr>
+			<tr data-i18n="title=settingsCheckCertsTooltip">
 				<td class="key">
 					<label for="certChecks" data-i18n="settingsLblCheckCerts"></label>
 				</td>
@@ -48,7 +47,16 @@
 				</td>
 			</tr>
 
-			<tr>
+			<tr data-i18n="title=settingsIgnoredDomainsTooltip">
+				<td class="key">
+					<label for="ignoredDomains" data-i18n="settingsLblIgnoredDomains"></label>
+				</td>
+				<td>
+					<textarea id="ignoredDomains" rows="15" data-i18n="placeholder=settingsIgnoredDomainsTooltip"></textarea>
+				</td>
+			</tr>
+
+			<tr data-i18n="title=settingsLogLevelTooltip">
 				<td class="key">
 					<label for="logLevel" data-i18n="settingsLblLogLevel"></label>
 				</td>
@@ -62,17 +70,12 @@
 			</tr>
 
 			<tr>
-				<td class="key">
-					<label for="ignoredDomains" data-i18n="settingsLblIgnoredDomains"></label>
+				<td class="save">
+					<input type="button" id="save" disabled data-i18n="value=settingsSave" />
+					<input type="button" id="reset" disabled data-i18n="value=settingsReset" />
 				</td>
 			</tr>
 		</table>
-		<div class="sizeLimit">
-			<textarea id="ignoredDomains" rows="15" data-i18n="placeholder=settingsIgnoredDomainsTooltip;title=settingsIgnoredDomainsTooltip"></textarea>
-		</div>
-
-		<input type="button" id="save" disabled data-i18n="value=settingsSave" />
-		<input type="button" id="reset" disabled data-i18n="value=settingsReset" />
 
 		<!-- Force a bit of extra space in about:addons -->
 		<div> <br /> </div>
