Visual improvements for storage display
* Make table header stay always visible (sticky)
* Center remove button

--- a/cw_storage.html
+++ b/cw_storage.html
@@ -22,6 +22,17 @@
 				width: 100%;
 				margin-top: 1em;
 			}
+			table thead {
+				position: sticky;
+				top: 0;
+				z-index: 1;
+			}
+			.noLeft {
+				border-left: none !important;
+			}
+			.remove {
+				text-align: center;
+			}
 		</style>
 	</head>
 	<body>
@@ -30,31 +41,35 @@
 		<span id="numDomains">?</span> <span data-i18n="storageNumStoredDomains"></span>
 		<span id="storageSize"></span>
 
-		<table class="cwtable" id="storageTable">
-			<tr class="header">
-				<th rowspan="2">
-					<span data-i18n="storageFieldDomain"></span>
-					<br />
-					<input id="domainFilter" type="text" data-i18n="placeholder=storageFieldDomainFilter" />
-				</th>
-				<th colspan="4" data-i18n="storageFieldCert"></th>
-				<th rowspan="2">
-					<span data-i18n="storageRemoveHost"></span>
-					<br />
-					<input id="removeAll" type="button" data-i18n="value=storageRemoveAll" />
-				</th>
-			</tr>
-			<tr class="header">
-				<th data-i18n="storageFieldCertSubject"></th>
-				<th data-i18n="storageFieldCertIssuer"></th>
-				<th data-i18n="storageFieldCertValidityStart"></th>
-				<th data-i18n="storageFieldCertValidityEnd"></th>
-				<!--
-				<th>Serial Number</th>
-				<th>Public Key Hash</th>
-				<th>Fingerprint</th>
-				-->
-			</tr>
+		<table class="cwtable">
+			<thead>
+				<tr class="header">
+					<th rowspan="2" class="top">
+						<span data-i18n="storageFieldDomain"></span>
+						<br />
+						<input id="domainFilter" type="text" data-i18n="placeholder=storageFieldDomainFilter" />
+					</th>
+					<th colspan="4" class="top" data-i18n="storageFieldCert"></th>
+					<th rowspan="2" class="top">
+						<span data-i18n="storageRemoveHost"></span>
+						<br />
+						<input id="removeAll" type="button" data-i18n="value=storageRemoveAll" />
+					</th>
+				</tr>
+				<tr class="header">
+					<th class="noLeft" data-i18n="storageFieldCertSubject"></th>
+					<th data-i18n="storageFieldCertIssuer"></th>
+					<th data-i18n="storageFieldCertValidityStart"></th>
+					<th data-i18n="storageFieldCertValidityEnd"></th>
+					<!--
+					<th>Serial Number</th>
+					<th>Public Key Hash</th>
+					<th>Fingerprint</th>
+					-->
+				</tr>
+			</thead>
+			<tbody id="storageTable">
+			</tbody>
 		</table>
 		<script src="cw_common.js"></script>
 		<script src="cw_storage.js"></script>
