--- a/cw_settings.html
+++ b/cw_settings.html
@@ -35,46 +35,48 @@
 	</head>
 	<body>
 		<table>
-			<tr data-i18n="title=settingsCheckCertsTooltip">
-				<td class="key">
-					<label for="certChecks" data-i18n="settingsLblCheckCerts"></label>
-				</td>
-				<td>
-					<select id="certChecks">
-						<option value="all" data-i18n="settingsCheckAllCert"></option>
-						<option value="domain" data-i18n="settingsCheckDomainCert"></option>
-					</select>
-				</td>
-			</tr>
+			<tbody>
+				<tr data-i18n="title=settingsCheckCertsTooltip">
+					<td class="key">
+						<label for="certChecks" data-i18n="settingsLblCheckCerts"></label>
+					</td>
+					<td>
+						<select id="certChecks">
+							<option value="all" data-i18n="settingsCheckAllCert"></option>
+							<option value="domain" data-i18n="settingsCheckDomainCert"></option>
+						</select>
+					</td>
+				</tr>
 
-			<tr data-i18n="title=settingsIgnoredDomainsTooltip">
-				<td class="key">
-					<label for="ignoredDomains" data-i18n="settingsLblIgnoredDomains"></label>
-				</td>
-				<td>
-					<textarea id="ignoredDomains" rows="15" data-i18n="placeholder=settingsIgnoredDomainsTooltip"></textarea>
-				</td>
-			</tr>
+				<tr data-i18n="title=settingsIgnoredDomainsTooltip">
+					<td class="key">
+						<label for="ignoredDomains" data-i18n="settingsLblIgnoredDomains"></label>
+					</td>
+					<td>
+						<textarea id="ignoredDomains" rows="15" data-i18n="placeholder=settingsIgnoredDomainsTooltip"></textarea>
+					</td>
+				</tr>
 
-			<tr data-i18n="title=settingsLogLevelTooltip">
-				<td class="key">
-					<label for="logLevel" data-i18n="settingsLblLogLevel"></label>
-				</td>
-				<td>
-					<select id="logLevel">
-						<option value="none" data-i18n="settingsLogLevelNone"></option>
-						<option value="info" data-i18n="settingsLogLevelInfo"></option>
-						<option value="debug" data-i18n="settingsLogLevelDebug"></option>
-					</select>
-				</td>
-			</tr>
+				<tr data-i18n="title=settingsLogLevelTooltip">
+					<td class="key">
+						<label for="logLevel" data-i18n="settingsLblLogLevel"></label>
+					</td>
+					<td>
+						<select id="logLevel">
+							<option value="none" data-i18n="settingsLogLevelNone"></option>
+							<option value="info" data-i18n="settingsLogLevelInfo"></option>
+							<option value="debug" data-i18n="settingsLogLevelDebug"></option>
+						</select>
+					</td>
+				</tr>
 
-			<tr>
-				<td class="save">
-					<input type="button" id="save" disabled data-i18n="value=settingsSave" />
-					<input type="button" id="reset" disabled data-i18n="value=settingsReset" />
-				</td>
-			</tr>
+				<tr>
+					<td class="save">
+						<input type="button" id="save" disabled data-i18n="value=settingsSave" />
+						<input type="button" id="reset" disabled data-i18n="value=settingsReset" />
+					</td>
+				</tr>
+			</tbody>
 		</table>
 
 		<!-- Force a bit of extra space in about:addons -->
