Store lastSeen for certificates
Show "x days ago" and "in x days" like messages in storage
for lastSeen and validity.

--- a/cw_storage.html
+++ b/cw_storage.html
@@ -50,6 +50,7 @@
 						<input id="domainFilter" type="text" data-i18n="placeholder=storageFieldDomainFilter" />
 					</th>
 					<th colspan="4" class="top" data-i18n="storageFieldCert"></th>
+					<th rowspan="2" class="top" data-i18n="storageFieldCertLastSeen"></th>
 					<th rowspan="2" class="top">
 						<span data-i18n="storageRemoveHost"></span>
 						<br />
