--- a/cw_popup.html
+++ b/cw_popup.html
@@ -28,17 +28,17 @@
 		<main>
 			<p>
 				<img src="icons/cw_16_changed.png" alt="" width="16" height="16" />
-				<b><span id="numChanged">?</span></b> <span data-i18n="popupChangedCerts"></span>
+				<span id="numChanged"></span>
 				<ul id="changedList"></ul>
 			</p>
 			<p>
 				<img src="icons/cw_16_tofu.png" alt="" width="16" height="16" />
-				<b><span id="numTofu">?</span></b> <span data-i18n="popupTofuCerts"></span>
+				<span id="numTofu"></span>
 				<ul id="tofuList"></ul>
 			</p>
 			<p>
 				<img src="icons/cw_16_stored.png" alt="" width="16" height="16" />
-				<b><span id="numStored">?</span></b> <span data-i18n="popupStoredCerts"></span>
+				<span id="numStored"></span>
 				<ul id="storedList"></ul>
 			</p>
 		</main>
