--- a/cw_storage.html
+++ b/cw_storage.html
@@ -11,9 +11,6 @@
 				float: left;
 				padding-bottom: 10px;
 			}
-			#numDomains {
-				font-weight: bold;
-			}
 			#domainFilter::placeholder {
 				text-align: center;
 			}
@@ -42,7 +39,7 @@
 		</header>
 
 		<main>
-			<span id="numDomains">?</span> <span data-i18n="storageNumStoredDomains"></span>
+			<span id="numDomains"></span>
 			<span id="storageSize"></span>
 
 			<table class="cwtable">
