Add option to select which fields should be checked
Differences in "unchecked" fields are accepted automatically

--- a/cw_settings.html
+++ b/cw_settings.html
@@ -86,6 +86,38 @@
 					</td>
 				</tr>
 
+				<tr data-i18n="title=settingsCheckedFieldsTooltip">
+					<td class="key">
+						<label for="checkedFields" data-i18n="settingsLblCheckedFields"></label>
+					</td>
+					<td>
+						<form id="checkedFields">
+							<input type="checkbox" name="checkedFields" value="subject" id="checkFieldSubject" />
+							<label for="checkFieldSubject" data-i18n="settingsLblCheckSubject"></label>
+							<br/>
+
+							<input type="checkbox" name="checkedFields" value="issuer" id="checkFieldIssuer" />
+							<label for="checkFieldIssuer" data-i18n="settingsLblCheckIssuer"></label>
+							<br/>
+
+							<input type="checkbox" name="checkedFields" value="validity" id="checkFieldValidity" />
+							<label for="checkFieldValidity" data-i18n="settingsLblCheckValidity"></label>
+							<br/>
+
+							<input type="checkbox" name="checkedFields" value="subjectPublicKeyInfoDigest" id="checkFieldPublicKey" />
+							<label for="checkFieldPublicKey" data-i18n="settingsLblCheckPublicKey"></label>
+							<br/>
+
+							<input type="checkbox" name="checkedFields" value="serialNumber" id="checkFieldSerialNumber" />
+							<label for="checkFieldSerialNumber" data-i18n="settingsLblCheckSerialNumber"></label>
+							<br/>
+
+							<input type="checkbox" name="checkedFields" value="fingerprint" id="checkFieldFingerprint" />
+							<label for="checkFieldFingerprint" data-i18n="settingsLblCheckFingerprint"></label>
+						</form>
+					</td>
+				</tr>
+
 				<tr>
 					<td class="save">
 						<input type="button" id="save" disabled data-i18n="value=settingsSave" />
